<resources>
    <string name="app_name">My Application</string>
    <string name="m">Mango</string>
    <string name="cherry">Cherry</string>
    <string name="Grapes">Grapes</string>
    <string name="Kiwi">Kiwi</string>
    <string name="watermelon">Watermelon</string>
    <string name="orange">Orange</string>
    <string name="Pineapple">Pineapple</string>
    <string name="Apple">Apple</string>
    <string name="rightbtn">re</string>
    <string name="right">r</string>
    <string name="left">l</string>
    <string name="Raspberry">Raspberry</string>
    <string name="Strawberry">Strawberry</string>
    <string name="Mango">Mango</string>
    <string name="mango">mango</string>
    <string name="Pin">pin</string>
    <string name="apple">apple</string>
    <string name="Speaker">Speaker</string>
    <string name="Welcome">Welcome</string>
    <string name="Name">Name</string>
    <string name="textview">TextView</string>
    <string name="Enter_your_name">Enter your name</string>
    <string name="wall">wall</string>
    <string name="Fruits">Fruits</string>
    <string name="Ok">Ok</string>
</resources>