<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kiwi">

    <TextView
        android:id="@+id/textView"
        android:layout_width="413dp"
        android:layout_height="87dp"
        android:background="#C8C0CA"
        android:gravity="center_horizontal"
        android:shadowColor="@color/cardview_dark_background"
        android:shadowDx="12"
        android:shadowDy="12"
        android:shadowRadius="8"
        android:text="@string/Kiwi"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.889" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="377dp"
        android:layout_height="431dp"
        android:contentDescription="@string/Kiwi"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112"
        app:srcCompat="@drawable/ki" />

    <ImageView
        android:id="@+id/re"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:contentDescription="@string/right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713"
        app:srcCompat="@drawable/re" />

    <ImageView
        android:id="@+id/le"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:contentDescription="@string/left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/re"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.725"
        app:srcCompat="@drawable/le" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="33dp"
        android:layout_height="60dp"
        android:contentDescription="@string/Speaker"
        android:onClick="playIt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/re"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toEndOf="@+id/le"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734"
        app:srcCompat="@drawable/spe" />


</androidx.constraintlayout.widget.ConstraintLayout>