<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F6FA"
    tools:context=".Home">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="209dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="88dp"
        android:text="@string/Welcome"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edit"
        android:layout_width="324dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Enter_your_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="173dp"
        android:layout_height="65dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="182dp"
        android:layout_height="221dp"
        android:contentDescription="@string/wall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541"
        app:srcCompat="@drawable/fw" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="180dp"
        android:layout_height="44dp"
        android:background="#FBC02D"
        android:gravity="center_horizontal"
        android:text="@string/Fruits"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/imageView13"
        app:layout_constraintVertical_bias="0.947" />

    <Button
        android:id="@+id/btn"
        android:layout_width="73dp"
        android:layout_height="42dp"
        android:text="@string/Ok"
        app:layout_constraintBottom_toBottomOf="@+id/edit"
        app:layout_constraintEnd_toEndOf="@+id/edit"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="@+id/edit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771"
        tools:ignore="InvalidId" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="177dp"
        android:layout_height="209dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit"
        app:layout_constraintVertical_bias="0.525"
        app:srcCompat="@drawable/vw" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:background="#FBC02D"
        android:gravity="center_horizontal"
        android:onClick="active"
        android:text="Vegetables"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/imageView14"
        app:layout_constraintVertical_bias="0.976" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="182dp"
        android:layout_height="190dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:layout_constraintVertical_bias="0.404"
        app:srcCompat="@drawable/abc" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="182dp"
        android:layout_height="42dp"
        android:background="#FBC02D"
        android:gravity="center_horizontal"
        android:text="Alphabets"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        app:layout_constraintVertical_bias="0.94" />

</androidx.constraintlayout.widget.ConstraintLayout>